--- a/solid-auth/package.json
+++ b/solid-auth/package.json
@@ -9,17 +9,22 @@
   "devDependencies": {
     "@types/node": "^18.11.9",
     "esbuild": "^0.14.54",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.21",
     "solid-start-node": "^0.2.0",
     "typescript": "^4.8.4",
     "vite": "^3.1.8"
   },
   "dependencies": {
+    "@auth/core": "latest",
+    "@solid-auth/next": "latest",
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.6.0",
+    "autoprefixer": "^10.4.13",
     "solid-js": "^1.6.2",
     "solid-start": "^0.2.0",
-    "undici": "^5.11.0"
+    "tailwindcss": "^3.2.4",
+    "undici": "^5.11.0",
+    "zod": "^3.19.1"
   },
   "engines": {
     "node": ">=16.8"
