--- a/solid-pnpm-turbo-template/turbo.json
+++ b/solid-pnpm-turbo-template/turbo.json
@@ -1,14 +1,27 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
+    "dev": {
+      "dependsOn": [
+        "^db:generate"
+      ],
+      "cache": false
+    },
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+      "dependsOn": [
+        "^db:generate"
+      ],
+      "outputs": [
+        "your-outputs-here"
+      ]
     },
     "lint": {
       "outputs": []
     },
-    "dev": {
+    "db:generate": {
+      "cache": false
+    },
+    "db:push": {
       "cache": false
     }
   }
