--- a/solid-turborepo-pnpm/apps/app/package.json
+++ b/solid-turborepo-pnpm/apps/app/package.json
@@ -1,12 +1,13 @@
 {
   "name": "app",
   "scripts": {
-    "dev": "solid-start dev --port 3000",
+    "dev": "pnpm db:generate && solid-start dev --port 3000",
     "start": "solid-start start --port 3000",
     "build": "solid-start build",
     "lint": "eslint --fix \"**/*.{ts,tsx,js,jsx}\"",
-    "push": "prisma db push",
-    "postinstall": "prisma generate"
+    "postinstall": "pnpm db:generate",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push --skip-generate"
   },
   "type": "module",
   "devDependencies": {
